--- a/src/main/resources/templates/group/groups.html
+++ b/src/main/resources/templates/group/groups.html
@@ -22,7 +22,7 @@
     <!-- DataTables CSS -->
     <link rel="stylesheet" th:href="@{/css/addons/datatables.min.css}"/>
     <!-- DataTables JS -->
-    <script rel="stylesheet" th:href="@{/js/addons/datatables.min.js}" ></script>
+    <script rel="stylesheet" th:href="@{/js/addons/datatables.min.js}"></script>
 </head>
 <body>
 <div th:replace="common/header :: header"></div>
@@ -46,7 +46,8 @@
 
                         <!-- Email -->
                         <div class="md-form">
-                            <input type="text" th:field="*{name}" class="form-control" id="groupName" placeholder="*Nazwa grupy"/>
+                            <input type="text" th:field="*{name}" class="form-control" id="groupName"
+                                   placeholder="*Nazwa grupy"/>
                             <label th:if="${#fields.hasErrors('name')}" th:errors="*{name}"
                                    class="validation-message" for="groupName"></label>
                         </div>
@@ -67,73 +68,18 @@
 
                                 <!-- Table body -->
                                 <tbody id="members">
-                                <tr>
+                                <tr th:each="friend, index: ${userFriends}">
                                     <th scope="row">1</th>
-                                    <td>Grupa 1</td>
-                                    <td>Admin</td>
+                                    <td th:text="${friend.firstName}"></td>
+                                    <td th:text="${friend.lastName}"></td>
                                     <td>
                                         <div class="custom-control custom-checkbox">
-                                            <input type="checkbox" class="custom-control-input" id="1">
-                                            <label class="custom-control-label" for="1"></label>
+                                            <input type="checkbox" class="custom-control-input" th:id="${'friend-'+index}"
+                                                    th:value="${friend.id}">
+                                            <label class="custom-control-label" th:for="${'friend-'+index}"></label>
                                         </div>
                                     </td>
                                 </tr>
-                                <tr>
-                                    <th scope="row">1</th>
-                                    <td>Grupa 1</td>
-                                    <td>Admin</td>
-                                    <td>
-                                        <div class="custom-control custom-checkbox">
-                                            <input type="checkbox" class="custom-control-input" id="1">
-                                            <label class="custom-control-label" for="1"></label>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">1</th>
-                                    <td>Grupa 1</td>
-                                    <td>Admin</td>
-                                    <td>
-                                        <div class="custom-control custom-checkbox">
-                                            <input type="checkbox" class="custom-control-input" id="1">
-                                            <label class="custom-control-label" for="1"></label>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">1</th>
-                                    <td>Grupa 1</td>
-                                    <td>Admin</td>
-                                    <td>
-                                        <div class="custom-control custom-checkbox">
-                                            <input type="checkbox" class="custom-control-input" id="1">
-                                            <label class="custom-control-label" for="1"></label>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">1</th>
-                                    <td>Grupa 1</td>
-                                    <td>Admin</td>
-                                    <td>
-                                        <div class="custom-control custom-checkbox">
-                                            <input type="checkbox" class="custom-control-input" id="1">
-                                            <label class="custom-control-label" for="1"></label>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">1</th>
-                                    <td>Grupa 1</td>
-                                    <td>Admin</td>
-                                    <td>
-                                        <div class="custom-control custom-checkbox">
-                                            <input type="checkbox" class="custom-control-input" id="1">
-                                            <label class="custom-control-label" for="1"></label>
-                                        </div>
-                                    </td>
-                                </tr>
-
                                 </tbody>
                                 <!-- Table body -->
                             </table>
@@ -173,7 +119,8 @@
                             <!-- Table body -->
                             <tbody id="demo">
                             <th:block th:each="grp : ${travelGroups}">
-                                <tr style="cursor: pointer" th:onclick="'window.location.href = \'' + @{/group/details/{groupId}/members(groupId=${grp.groupId})}+ '\''">
+                                <tr style="cursor: pointer"
+                                    th:onclick="'window.location.href = \'' + @{/group/details/{groupId}/members(groupId=${grp.groupId})}+ '\''">
                                     <th th:href="@{/group/details/{groupId}/members(groupId=${grp.groupId})}">1</th>
                                     <td th:text="${grp.groupName}"></td>
                                     <td th:text="${grp.groupRole.name() == 'OWNER' ? 'Organizator' : 'Uczestnik'}"></td>
