added group creation with friends

--- a/src/main/resources/templates/group/groups.html
+++ b/src/main/resources/templates/group/groups.html
@@ -75,7 +75,7 @@
                                     <td>
                                         <div class="custom-control custom-checkbox">
                                             <input type="checkbox" class="custom-control-input" th:id="${'friend-'+index}"
-                                                    th:value="${friend.id}">
+                                                    th:value="${friend.id}" name="friendIds">
                                             <label class="custom-control-label" th:for="${'friend-'+index}"></label>
                                         </div>
                                     </td>
