--- a/src/main/resources/templates/group/groupDetailsPlanning.html
+++ b/src/main/resources/templates/group/groupDetailsPlanning.html
@@ -321,6 +321,7 @@
                 location.reload();
             },
             error: function (error) {
+                location.reload();
                 console.log('Error sending form')
             }
         });
