travel group details part 1

--- a/src/main/resources/templates/friend/friends.html
+++ b/src/main/resources/templates/friend/friends.html
@@ -97,7 +97,7 @@
                                         <div class="col-12">
                                             <div class="card mb-3">
                                                 <h5 class="card-header blue darken-2 white-text text-center py-2">
-                                                    <strong>Zaproś nowego znajomoego</strong>
+                                                    <strong>Zaproś nowego znajomego</strong>
                                                 </h5>
                                                 <div class="card-body px-lg-5 py-0 ">
                                                     <form autocomplete="off" action="#" th:action="@{/friends/add}"
